--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -36,7 +36,8 @@
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}
+    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.author }}</p> {% endif %}<br>
+    <i>{post.venue}</i>
     </li>
  </article>
 </div>
