--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,3 +1,14 @@
+<h2>2025</h2>
+<ul>
+<li><a href="https://arxiv.org/pdf/2503.10480"><em>World Modeling Makes a Better Planner:</em> Dual Preference Optimization for Embodied Task Planning</a>.<br><b>Siyin Wang</b>, Zhaoye Fei, Qinyuan Cheng, Shiduo Zhang, Panpan Cai, Jinlan Fu, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
+<li>
+    <a href="https://arxiv.org/pdf/2504.09130">VisuoThink: Empowering LVLM Reasoning with Multimodal Tree Search</b></a>.<br>
+    Yikun Wang<sup>*</sup>, <b>Siyin Wang</b><sup>*</sup>, Qinyuan Cheng, Zhaoye Fei, Liang Ding, Qipeng Guo, Dacheng Tao, Xipeng Qiu.
+    <i>Arxiv 2025</i>, 2025.
+    <br>
+    <small><sup>*</sup>Equal contribution</small>
+  </li>
+</ul>
 <h2>2024</h2>
 <ul>
 <li><a href="https://arxiv.org/pdf/2406.15279">Cross-Modality Safety Alignment</a>.<br><b>Siyin Wang</b>, Xingsong Ye, Qinyuan Cheng, Junwen Duan, Shimin Li, Jinlan Fu, Xipeng Qiu, Xuanjing Huang. <i>Arxiv 2024</i>, 2024. </li>
