--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -2,7 +2,7 @@
 <ul>
 <li><a href="https://arxiv.org/pdf/2503.10480"><em>World Modeling Makes a Better Planner:</em> Dual Preference Optimization for Embodied Task Planning</a>.<br><b>Siyin Wang</b>, Zhaoye Fei, Qinyuan Cheng, Shiduo Zhang, Panpan Cai, Jinlan Fu, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li>
-    <a href="https://arxiv.org/pdf/2504.09130">VisuoThink: Empowering LVLM Reasoning with Multimodal Tree Search</b></a>.<br>
+    <a href="https://arxiv.org/pdf/2504.09130">VisuoThink: Empowering LVLM Reasoning with Multimodal Tree Search</a>.<br>
     Yikun Wang<sup>*</sup>, <b>Siyin Wang</b><sup>*</sup>, Qinyuan Cheng, Zhaoye Fei, Liang Ding, Qipeng Guo, Dacheng Tao, Xipeng Qiu.
     <i>Arxiv 2025</i>, 2025.
     <br>
