--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,17 +1,17 @@
 <h2>2025</h2>
 <ul>
-<li><a href="https://arxiv.org/pdf/2503.10480"><em>World Modeling Makes a Better Planner:</em> Dual Preference Optimization for Embodied Task Planning</a>.<br><b>Siyin Wang</b>, Zhaoye Fei, Qinyuan Cheng, Shiduo Zhang, Panpan Cai, Jinlan Fu, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
+<li><a href="https://arxiv.org/pdf/2503.10480"><em>World Modeling Makes a Better Planner:</em> Dual Preference Optimization for Embodied Task Planning</a>.<br><b>Siyin Wang</b>, Zhaoye Fei, Qinyuan Cheng, Shiduo Zhang, Panpan Cai, Jinlan Fu, Xipeng Qiu. <i>Association for Computational Linguistics (ACL)</i>, 2025. </li>
 <li>
     <a href="https://arxiv.org/pdf/2504.09130">VisuoThink: Empowering LVLM Reasoning with Multimodal Tree Search</a>.<br>
     Yikun Wang<sup>*</sup>, <b>Siyin Wang</b><sup>*</sup>, Qinyuan Cheng, Zhaoye Fei, Liang Ding, Qipeng Guo, Dacheng Tao, Xipeng Qiu.
-    <i>Arxiv 2025</i>, 2025.
+    <i>Association for Computational Linguistics (ACL)</i>, 2025.
     <br>
     <small><sup>*</sup>Equal contribution</small>
   </li>
+<li><a href="https://arxiv.org/pdf/2406.15279">Cross-Modality Safety Alignment</a>.<br><b>Siyin Wang</b>, Xingsong Ye, Qinyuan Cheng, Junwen Duan, Shimin Li, Jinlan Fu, Xipeng Qiu, Xuanjing Huang. <i>Findings of North American Chapter of the Association for Computational Linguistics (NAACL Findings)</i>, 2025. </li>
 </ul>
 <h2>2024</h2>
 <ul>
-<li><a href="https://arxiv.org/pdf/2406.15279">Cross-Modality Safety Alignment</a>.<br><b>Siyin Wang</b>, Xingsong Ye, Qinyuan Cheng, Junwen Duan, Shimin Li, Jinlan Fu, Xipeng Qiu, Xuanjing Huang. <i>Arxiv 2024</i>, 2024. </li>
 <li><a href="https://arxiv.org/pdf/2402.11251">LLM can Achieve Self-Regulation via Hyperparameter Aware Generation</a>.<br><b>Siyin Wang</b>, Shimin Li, Tianxiang Sun, Jinlan Fu, Qinyuan Cheng, Jiasheng Ye, Junjie Ye, Xipeng Qiu, Xuanjing Huang. <i>Findings of the Association for Computational Linguistics (ACL Findings)</i>, 2024. </li>
 <li><a href="https://aclanthology.org/2024.lrec-main.470.pdf">Domain Generalization via Causal Adjustment for Cross-Domain Sentiment Analysis</a>.<br><b>Siyin Wang</b>, Jie Zhou, Qin Chen, Qi Zhang, Tao Gui, Xuanjing Huang. <i>The 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</i>, 2024. </li>
 <li><a href="https://arxiv.org/pdf/2312.10479">A Soft Contrastive Learning-Based Prompt Model for Few-Shot Sentiment Analysis</a>.<br>Jingyi Zhou, Jie Zhou, Jiabao Zhao, <b>Siyin Wang</b>, Haijun Shan, Tao Gui, Qi Zhang, Xuanjing Huang. <i>International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, 2024. </li>
