--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,7 +1,7 @@
 <h2>2025</h2>
 <ul>
 <li><a href="https://arxiv.org/pdf/2506.23127">Unleashing Embodied Task Planning Ability in LLMs via Reinforcement Learning</a>.<br>Zhaoye Fei, Li Ji, <b>Siyin Wang</b>, Junhao Shi, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
-<li><a href="https://arxiv.org/pdf/2506.21230">World-aware Planning Narratives Enhance Large Vision-Language Model Planner</a>.<br>Junhao Shi, Zhaoye Fei, <b>Siyin Wang</b>, Qipeng Guo, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
+<li><a href="https://arxiv.org/pdf/2506.21230">World-aware Planning Narratives Enhance Large Vision-Language Model Planner</a>.<br>Junhao Shi, Zhaoye Fei, <b>Siyin Wang</b>, Qipeng Guo, Jingjing Gong, Xipeng Qiu. <i>Neural Information Processing Systems (NeurIPS)</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2505.15776">ConvSearch-R1: Enhancing Query Reformulation for Conversational Search with Reasoning via Reinforcement Learning</a>.<br>Changtai Zhu, <b>Siyin Wang</b>, Ruijun Feng, Kai Song, Xipeng Qiu. <i>Empirical Methods in Natural Language Processing (EMNLP)</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2503.10480"><em>World Modeling Makes a Better Planner:</em> Dual Preference Optimization for Embodied Task Planning</a>.<br><b>Siyin Wang</b>, Zhaoye Fei, Qinyuan Cheng, Shiduo Zhang, Panpan Cai, Jinlan Fu, Xipeng Qiu. <i>Association for Computational Linguistics (ACL)</i>, 2025. </li>
 <li>
