--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,5 +1,8 @@
+<small><sup>*</sup>Equal contribution</small>
 <h2>2025</h2>
 <ul>
+<li><a href="https://arxiv.org/pdf/2510.23763">RoboOmni: Proactive Robot Manipulation in Omni-modal Context</a>.<br><b>Siyin Wang</b>, , Jinlan Fu, Feihong Liu, Xinzhe He, Huangxuan Wu, Junhao Shi, Kexin Huang, Zhaoye Fei, Jingjing Gong, Zuxuan Wu, Yugang Jiang, See-Kiong Ng, Tat-Seng Chua, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
+<li><a href="https://arxiv.org/pdf/2510.13626">LIBERO-Plus: In-depth Robustness Analysis of Vision-Language-Action Models</a>.<br>Senyu Fei*, \textbf{Siyin Wang*}, Junhao Shi*, Zihao Dai, Jikun Cai, Pengfang Qian, Li Ji, Xinzhe He, Shiduo Zhang, Zhaoye Fei, Jinlan Fu, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2506.23127">Unleashing Embodied Task Planning Ability in LLMs via Reinforcement Learning</a>.<br>Zhaoye Fei, Li Ji, <b>Siyin Wang</b>, Junhao Shi, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2506.21230">World-aware Planning Narratives Enhance Large Vision-Language Model Planner</a>.<br>Junhao Shi, Zhaoye Fei, <b>Siyin Wang</b>, Qipeng Guo, Jingjing Gong, Xipeng Qiu. <i>Neural Information Processing Systems (NeurIPS)</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2505.15776">ConvSearch-R1: Enhancing Query Reformulation for Conversational Search with Reasoning via Reinforcement Learning</a>.<br>Changtai Zhu, <b>Siyin Wang</b>, Ruijun Feng, Kai Song, Xipeng Qiu. <i>Empirical Methods in Natural Language Processing (EMNLP)</i>, 2025. </li>
@@ -9,7 +12,6 @@
     Yikun Wang<sup>*</sup>, <b>Siyin Wang</b><sup>*</sup>, Qinyuan Cheng, Zhaoye Fei, Liang Ding, Qipeng Guo, Dacheng Tao, Xipeng Qiu.
     <i>Association for Computational Linguistics (ACL)</i>, 2025.
     <br>
-    <small><sup>*</sup>Equal contribution</small>
   </li>
 <li><a href="https://arxiv.org/pdf/2406.15279">Cross-Modality Safety Alignment</a>.<br><b>Siyin Wang</b>, Xingsong Ye, Qinyuan Cheng, Junwen Duan, Shimin Li, Jinlan Fu, Xipeng Qiu, Xuanjing Huang. <i>Findings of North American Chapter of the Association for Computational Linguistics (NAACL Findings)</i>, 2025. </li>
 </ul>
