--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -2,6 +2,7 @@
 <h2>2025</h2>
 <ul>
 <li><a href="https://arxiv.org/pdf/2510.23763">RoboOmni: Proactive Robot Manipulation in Omni-modal Context</a>.<br><b>Siyin Wang</b>, Jinlan Fu, Feihong Liu, Xinzhe He, Huangxuan Wu, Junhao Shi, Kexin Huang, Zhaoye Fei, Jingjing Gong, Zuxuan Wu, Yugang Jiang, See-Kiong Ng, Tat-Seng Chua, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
+<li><a href="https://arxiv.org/pdf/2511.15605">SRPO: Self-Referential Policy Optimization for Vision-Language-Action Models</a>.<br>Senyu Fei*, <b>Siyin Wang*</b>, Li Ji, Ao Li, Shiduo Zhang, Liming Liu, Jinlong Hou, Jingjing Gong, Xianzhong Zhao, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2510.13626">LIBERO-Plus: In-depth Robustness Analysis of Vision-Language-Action Models</a>.<br>Senyu Fei*, <b>Siyin Wang*</b>, Junhao Shi*, Zihao Dai, Jikun Cai, Pengfang Qian, Li Ji, Xinzhe He, Shiduo Zhang, Zhaoye Fei, Jinlan Fu, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2506.23127">Unleashing Embodied Task Planning Ability in LLMs via Reinforcement Learning</a>.<br>Zhaoye Fei, Li Ji, <b>Siyin Wang</b>, Junhao Shi, Jingjing Gong, Xipeng Qiu. <i>Arxiv 2025</i>, 2025. </li>
 <li><a href="https://arxiv.org/pdf/2506.21230">World-aware Planning Narratives Enhance Large Vision-Language Model Planner</a>.<br>Junhao Shi, Zhaoye Fei, <b>Siyin Wang</b>, Qipeng Guo, Jingjing Gong, Xipeng Qiu. <i>Neural Information Processing Systems (NeurIPS)</i>, 2025. </li>
